--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/icon": "1.13.0",
     "@nuxt/image": "1.10.0",
+    "@pinia/nuxt": "0.11.0",
     "@tailwindcss/vite": "^4.1.8",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
+    "pinia": "^3.0.2",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
